generalised agent algorithms for multidimensional sates
- now the agent traces both the visited actions and states
- created new Factor functions to flatten states to one dim
- created new CRDConditional to perform simulations with conditional agents
- created new crdC executable for simulations with conditional agents

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -40,16 +40,16 @@ if (MAKE_CRD_UNCERTAINTY)
     target_link_libraries(crdTU EGTTools)
 endif ()
 
-if (MAKE_CRD_POP)
-    add_executable(crdP RL/main_pop.cpp ${CRD_RL_SOURCE})
-    target_link_libraries(crdP ${Boost_LIBRARIES} boost_program_options)
-    set_target_properties(crdP PROPERTIES CMAKE_CXX_FLAGS lboost_program_options)
-    set_target_properties(crdP PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
-    target_link_libraries(crdP EGTTools)
-endif ()
+#if (MAKE_CRD_POP)
+#    add_executable(crdP RL/main_pop.cpp ${CRD_RL_SOURCE})
+#    target_link_libraries(crdP ${Boost_LIBRARIES} boost_program_options)
+#    set_target_properties(crdP PROPERTIES CMAKE_CXX_FLAGS lboost_program_options)
+#    set_target_properties(crdP PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
+#    target_link_libraries(crdP EGTTools)
+#endif ()
 
 add_executable(crdC RL/main_conditional.cpp ${CRD_RL_SOURCE})
 target_link_libraries(crdC ${Boost_LIBRARIES} boost_program_options)
 set_target_properties(crdC PROPERTIES CMAKE_CXX_FLAGS lboost_program_options)
-#set_target_properties(crdC PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
+set_target_properties(crdC PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
 target_link_libraries(crdC EGTTools)
