--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -36,7 +36,7 @@ if (MAKE_CRD_UNCERTAINTY)
     add_executable(crdTU RL/main_uncertainty.cpp ${CRD_RL_SOURCE})
     target_link_libraries(crdTU ${Boost_LIBRARIES} boost_program_options)
     set_target_properties(crdTU PROPERTIES CMAKE_CXX_FLAGS lboost_program_options)
-    set_target_properties(crdTU PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
+#    set_target_properties(crdTU PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
     target_link_libraries(crdTU EGTTools)
 endif ()
 
@@ -53,3 +53,9 @@ target_link_libraries(crdC ${Boost_LIBRARIES} boost_program_options)
 set_target_properties(crdC PROPERTIES CMAKE_CXX_FLAGS lboost_program_options)
 set_target_properties(crdC PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
 target_link_libraries(crdC EGTTools)
+
+add_executable(crdD RL/main_democracy.cpp ${CRD_RL_SOURCE})
+target_link_libraries(crdD ${Boost_LIBRARIES} boost_program_options)
+set_target_properties(crdD PROPERTIES CMAKE_CXX_FLAGS lboost_program_options)
+set_target_properties(crdD PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
+target_link_libraries(crdD EGTTools)
