fixed malloc exception with singleton binding
- implemented container for population

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -25,20 +25,20 @@ if (MAKE_PMORAN)
 endif ()
 
 if (MAKE_CRD)
-    add_executable(crd RL/main.cpp ${CRD_RL_SOURCE})
+    add_executable(crd RL/main.cpp ${CRD_RL_SOURCE} ../include/Dyrwin/RL/CrdSim.hpp)
     target_link_libraries(crd ${Boost_LIBRARIES} boost_program_options)
     set_target_properties(crd PROPERTIES CMAKE_CXX_FLAGS lboost_program_options)
     set_target_properties(crd PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
     target_link_libraries(crd EGTTools)
 endif ()
 
-if (MAKE_CRD_UNCERTAINTY)
-    add_executable(crdTU RL/main_uncertainty.cpp ${CRD_RL_SOURCE})
-    target_link_libraries(crdTU ${Boost_LIBRARIES} boost_program_options)
-    set_target_properties(crdTU PROPERTIES CMAKE_CXX_FLAGS lboost_program_options)
-#    set_target_properties(crdTU PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
-    target_link_libraries(crdTU EGTTools)
-endif ()
+#if (MAKE_CRD_UNCERTAINTY)
+#    add_executable(crdTU RL/main_uncertainty.cpp ${CRD_RL_SOURCE})
+#    target_link_libraries(crdTU ${Boost_LIBRARIES} boost_program_options)
+#    set_target_properties(crdTU PROPERTIES CMAKE_CXX_FLAGS lboost_program_options)
+##    set_target_properties(crdTU PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
+#    target_link_libraries(crdTU EGTTools)
+#endif ()
 
 #if (MAKE_CRD_POP)
 #    add_executable(crdP RL/main_pop.cpp ${CRD_RL_SOURCE})
@@ -48,14 +48,14 @@ endif ()
 #    target_link_libraries(crdP EGTTools)
 #endif ()
 
-add_executable(crdC RL/main_conditional.cpp ${CRD_RL_SOURCE})
-target_link_libraries(crdC ${Boost_LIBRARIES} boost_program_options)
-set_target_properties(crdC PROPERTIES CMAKE_CXX_FLAGS lboost_program_options)
-set_target_properties(crdC PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
-target_link_libraries(crdC EGTTools)
-
-add_executable(crdD RL/main_democracy.cpp ${CRD_RL_SOURCE})
-target_link_libraries(crdD ${Boost_LIBRARIES} boost_program_options)
-set_target_properties(crdD PROPERTIES CMAKE_CXX_FLAGS lboost_program_options)
-set_target_properties(crdD PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
-target_link_libraries(crdD EGTTools)
+#add_executable(crdC RL/main_conditional.cpp ${CRD_RL_SOURCE})
+#target_link_libraries(crdC ${Boost_LIBRARIES} boost_program_options)
+#set_target_properties(crdC PROPERTIES CMAKE_CXX_FLAGS lboost_program_options)
+#set_target_properties(crdC PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
+#target_link_libraries(crdC EGTTools)
+#
+#add_executable(crdD RL/main_democracy.cpp ${CRD_RL_SOURCE})
+#target_link_libraries(crdD ${Boost_LIBRARIES} boost_program_options)
+#set_target_properties(crdD PROPERTIES CMAKE_CXX_FLAGS lboost_program_options)
+#set_target_properties(crdD PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
+#target_link_libraries(crdD EGTTools)
