--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,14 +1,14 @@
 cmake_minimum_required(VERSION 3.9)
 
-set(SOURCE_FILES src/main.cpp
-        src/CollectiveRiskDilemma.cpp
-        include/Dyrwin/crd/CollectiveRiskDilemma.h
-        src/CRDPlayer.cpp src/CRDSimulator.cpp
-        include/Dyrwin/crd/CRDSimulator.h
-        include/Dyrwin/Utils.h src/SeedGenerator.cpp
-        include/Dyrwin/SeedGenerator.h
-        include/Dyrwin/CommandLineParsing.h
-        include/Dyrwin/ipd/IteratedPrisonersDilemma.cpp)
+#set(SOURCE_FILES src/main.cpp
+#        src/CollectiveRiskDilemma.cpp
+#        include/Dyrwin/crd/CollectiveRiskDilemma.h
+#        src/CRDPlayer.cpp src/CRDSimulator.cpp
+#        include/Dyrwin/crd/CRDSimulator.h
+#        include/Dyrwin/Utils.h src/SeedGenerator.cpp
+#        include/Dyrwin/SeedGenerator.h
+#        include/Dyrwin/CommandLineParsing.h
+#        include/Dyrwin/ipd/IteratedPrisonersDilemma.cpp)
 
 #if (MAKE_DYRWIN)
 #    add_executable(Dyrwin ${SOURCE_FILES})
@@ -16,21 +16,21 @@ set(SOURCE_FILES src/main.cpp
 #    set_target_properties(Dyrwin PROPERTIES CMAKE_CXX_FLAGS lboost_program_options)
 #endif ()
 
-if (MAKE_PMORAN)
-    add_executable(pmoran SED/pmain.cpp ${PYTHON_MORAN_SOURCE})
-    target_link_libraries(pmoran ${Boost_LIBRARIES} boost_program_options)
-    set_target_properties(pmoran PROPERTIES CMAKE_CXX_FLAGS lboost_program_options)
-    set_target_properties(pmoran PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
-    target_link_libraries(pmoran EGTTools)
-endif ()
 
-if (MAKE_CRD)
-    add_executable(crd RL/main.cpp ${CRD_RL_SOURCE} ../include/Dyrwin/RL/CrdSim.hpp)
-    target_link_libraries(crd ${Boost_LIBRARIES} boost_program_options)
-    set_target_properties(crd PROPERTIES CMAKE_CXX_FLAGS lboost_program_options)
-    set_target_properties(crd PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
-    target_link_libraries(crd EGTTools)
-endif ()
+add_executable(pmoran SED/pmain.cpp)
+target_link_libraries(pmoran ${Boost_LIBRARIES} boost_program_options)
+set_target_properties(pmoran PROPERTIES CMAKE_CXX_FLAGS lboost_program_options)
+set_target_properties(pmoran PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
+target_link_libraries(pmoran EGTTools)
+
+
+
+add_executable(crd RL/main.cpp)
+target_link_libraries(crd ${Boost_LIBRARIES} boost_program_options)
+set_target_properties(crd PROPERTIES CMAKE_CXX_FLAGS lboost_program_options)
+set_target_properties(crd PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
+target_link_libraries(crd EGTTools)
+
 
 #if (MAKE_CRD_UNCERTAINTY)
 #    add_executable(crdTU RL/main_uncertainty.cpp ${CRD_RL_SOURCE})
