fixed other concurrency problems on run

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,7 +13,8 @@ add_library(EGTTools
         RL/HistericQLearningAgent.cpp
         RL/RothErevAgent.cpp
         RL/CrdSim.cpp
-        RL/Utils.cpp)
+        RL/Utils.cpp
+        )
 set_target_properties(EGTTools PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
 target_link_libraries(EGTTools Eigen3::Eigen)
 if (OPENMP_FOUND)
