--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -40,13 +40,11 @@ target_link_libraries(crd EGTTools)
 #    target_link_libraries(crdTU EGTTools)
 #endif ()
 
-#if (MAKE_CRD_POP)
-#    add_executable(crdP RL/main_pop.cpp ${CRD_RL_SOURCE})
-#    target_link_libraries(crdP ${Boost_LIBRARIES} boost_program_options)
-#    set_target_properties(crdP PROPERTIES CMAKE_CXX_FLAGS lboost_program_options)
-#    set_target_properties(crdP PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
-#    target_link_libraries(crdP EGTTools)
-#endif ()
+add_executable(crdP RL/main_pop.cpp ${CRD_RL_SOURCE})
+target_link_libraries(crdP ${Boost_LIBRARIES} boost_program_options)
+set_target_properties(crdP PROPERTIES CMAKE_CXX_FLAGS lboost_program_options)
+set_target_properties(crdP PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
+target_link_libraries(crdP EGTTools)
 
 #add_executable(crdC RL/main_conditional.cpp ${CRD_RL_SOURCE})
 #target_link_libraries(crdC ${Boost_LIBRARIES} boost_program_options)
