working simulations for any number of strategies

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -23,13 +23,13 @@ set_target_properties(pmoran PROPERTIES CMAKE_CXX_FLAGS lboost_program_options)
 set_target_properties(pmoran PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
 target_link_libraries(pmoran EGTTools)
 
-add_executable(behaviors SED/crd_behaviors_main.cpp)
+add_executable(behaviors SED/crd_behaviors.cpp ../include/Dyrwin/LruCache.hpp)
 target_link_libraries(behaviors ${Boost_LIBRARIES} boost_program_options)
 set_target_properties(behaviors PROPERTIES CMAKE_CXX_FLAGS lboost_program_options)
 set_target_properties(behaviors PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
 target_link_libraries(behaviors EGTTools)
 
-add_executable(crd RL/main.cpp ../include/Dyrwin/RL/Data.hpp)
+add_executable(crd RL/main.cpp)
 target_link_libraries(crd ${Boost_LIBRARIES} boost_program_options)
 set_target_properties(crd PROPERTIES CMAKE_CXX_FLAGS lboost_program_options)
 set_target_properties(crd PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
