added run method that returns all the states during the simulation
- added a vector for the CRD module in python that shows the strategies available

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,3 +12,10 @@ target_link_libraries(testCrdGame EGTTools)
 add_executable(testGeometric TestGeometric.cpp)
 set_target_properties(testGeometric PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
 target_link_libraries(testGeometric EGTTools)
+
+add_executable(testCounter TestCounter.cpp)
+set_target_properties(testCounter PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
+
+add_executable(testPM TestPairwiseMoran.cpp)
+#set_target_properties(testPM PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
+target_link_libraries(testPM EGTTools)
