fixed condition when pop homogeneous

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -21,4 +21,4 @@ add_executable(testPM TestPairwiseMoran.cpp)
 target_link_libraries(testPM EGTTools)
 
 add_executable(testSP TestIntSampling.cpp)
-set_target_properties(testPM PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
+set_target_properties(testSP PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
