--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,10 +21,7 @@ add_library(EGTTools
         RL/RothErevAgent.cpp
         RL/CrdSim.cpp
         RL/Utils.cpp
-        RL/PopContainer.cpp
-        crd/CollectiveRiskDilemma.cpp
-        crd/CRDPlayer.cpp
-        crd/CRDSimulator.cpp)
+        RL/PopContainer.cpp)
 set_target_properties(EGTTools PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
 target_link_libraries(EGTTools Eigen3::Eigen)
 if (OPENMP_FOUND)
