fixed loop error on runWellMixed
- The error was that the wrong variable was used in the loop condition

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,7 +26,7 @@ add_library(EGTTools
         AbouCRD/CRDPlayer.cpp
         AbouCRD/CRDSimulator.cpp
         AbouCRD/DataStruct.cpp RL/Data.cpp)
-set_target_properties(EGTTools PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
+#set_target_properties(EGTTools PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
 target_link_libraries(EGTTools Eigen3::Eigen)
 if (OPENMP_FOUND)
     target_link_libraries(EGTTools OpenMP::OpenMP_CXX)
