fixed conditional agents instantiation in well mixed population

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -24,5 +24,9 @@ add_executable(testSP TestIntSampling.cpp)
 set_target_properties(testSP PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
 
 add_executable(testCrdSim TestCrdSimRunWellMixed.cpp)
-set_target_properties(testTU PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
+set_target_properties(testCrdSim PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
 target_link_libraries(testCrdSim EGTTools)
+
+add_executable(testCrdSimCond TestCrdSimRunConditionalWellMixed.cpp)
+set_target_properties(testCrdSimCond PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
+target_link_libraries(testCrdSimCond EGTTools)
