--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,7 +27,12 @@ add_library(EGTTools
         AbouCRD/CRDPlayer.cpp
         AbouCRD/CRDSimulator.cpp
         AbouCRD/DataStruct.cpp RL/Data.cpp)
+
 set_target_properties(EGTTools PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
+set_target_properties(EGTTools PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
+# Fixing "ld: warning: direct access in function '...' from file '...' to global weak symbol '...' from file '...' means the weak symbol cannot
+# be overridden at runtime. This was likely caused by different translation units being compiled with different visibility settings."
+set_target_properties(EGTTools PROPERTIES C_VISIBILITY_PRESET hidden CXX_VISIBILITY_PRESET hidden)
 target_link_libraries(EGTTools Eigen3::Eigen)
 if (OPENMP_FOUND)
     target_link_libraries(EGTTools OpenMP::OpenMP_CXX)
