working run_group_islandsTU
- several modifications to CRDGame and CRDConditional
- these modifications might need more testing
- now the timing uncertainty games require a generator to be passed as argument
- with this we avoid possible problems when the game class is used in Multiprocessing

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -51,5 +51,5 @@ set_target_properties(testCrdSimIslandsPop PROPERTIES INTERPROCEDURAL_OPTIMIZATI
 target_link_libraries(testCrdSimIslandsPop EGTTools)
 
 add_executable(testCrdSimIslandsTUGroup TestCrdSimIslandsTUGroup.cpp)
-set_target_properties(testCrdSimIslandsTUGroup PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
+#set_target_properties(testCrdSimIslandsTUGroup PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
 target_link_libraries(testCrdSimIslandsTUGroup EGTTools)
