added remaining uncertainty simulations for islands with single groups.
- added simulation for threshold uncertainty and threshold+timing uncertainty.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,7 +33,7 @@ add_library(EGTTools
         AbouCRD/DataStruct.cpp RL/Data.cpp)
 
 # TODO: Separate libraries into EGT & RL
-#set_target_properties(EGTTools PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
+set_target_properties(EGTTools PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
 set_target_properties(EGTTools PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
 # Fixing "ld: warning: direct access in function '...' from file '...' to global weak symbol '...' from file '...' means the weak symbol cannot
 # be overridden at runtime. This was likely caused by different translation units being compiled with different visibility settings."
