added islands simulations with conditional agents
- also added tests for all new methods

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -73,3 +73,35 @@ target_link_libraries(testCrdSimIslandsThUPop EGTTools)
 add_executable(testCrdSimIslandsTUThUPop TestCrdSimIslandsTUThUPopulation.cpp)
 set_target_properties(testCrdSimIslandsTUThUPop PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
 target_link_libraries(testCrdSimIslandsTUThUPop EGTTools)
+
+add_executable(testCrdSimConditionalIslandsGroup testCrdSimConditionalIslandsGroup.cpp)
+set_target_properties(testCrdSimConditionalIslandsGroup PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
+target_link_libraries(testCrdSimConditionalIslandsGroup EGTTools)
+
+add_executable(testCrdSimConditionalIslandsTUGroup testCrdSimConditionalIslandsTUGroup.cpp)
+set_target_properties(testCrdSimConditionalIslandsTUGroup PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
+target_link_libraries(testCrdSimConditionalIslandsTUGroup EGTTools)
+
+add_executable(testCrdSimConditionalIslandsThUGroup testCrdSimConditionalIslandsThUGroup.cpp)
+set_target_properties(testCrdSimConditionalIslandsThUGroup PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
+target_link_libraries(testCrdSimConditionalIslandsThUGroup EGTTools)
+
+add_executable(testCrdSimConditionalIslandsTUThUGroup testCrdSimConditionalIslandsTUThUGroup.cpp)
+set_target_properties(testCrdSimConditionalIslandsTUThUGroup PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
+target_link_libraries(testCrdSimConditionalIslandsTUThUGroup EGTTools)
+
+add_executable(testCrdSimIslandsConditionalPop testCrdSimIslandsConditionalPopulation.cpp)
+set_target_properties(testCrdSimIslandsConditionalPop PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
+target_link_libraries(testCrdSimIslandsConditionalPop EGTTools)
+
+add_executable(testCrdSimIslandsTUConditionalPop testCrdSimIslandsTUConditionalPopulation.cpp)
+set_target_properties(testCrdSimIslandsTUConditionalPop PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
+target_link_libraries(testCrdSimIslandsTUConditionalPop EGTTools)
+
+add_executable(testCrdSimIslandsThUConditionalPop testCrdSimIslandsThUConditionalPopulation.cpp)
+set_target_properties(testCrdSimIslandsThUConditionalPop PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
+target_link_libraries(testCrdSimIslandsThUConditionalPop EGTTools)
+
+add_executable(testCrdSimIslandsTUThUConditionalPop testCrdSimIslandsTUThUConditionalPopulation.cpp)
+set_target_properties(testCrdSimIslandsTUThUConditionalPop PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
+target_link_libraries(testCrdSimIslandsTUThUConditionalPop EGTTools)
