fixes q learning agent and added SARSA. - using new c++17 tuple unfold

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,6 +20,7 @@ add_library(EGTTools
         RL/BatchQLearningForgetAgent.cpp
         RL/QLearningAgent.cpp
         RL/ESARSA.cpp
+        RL/SARSAAgent.cpp
         RL/HistericQLearningAgent.cpp
         RL/RothErevAgent.cpp
         RL/DiscountedQLearning.cpp
