moved population rl helper functions to separate module.
- added new forget propensities function

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,10 +29,12 @@ add_library(EGTTools
         RL/PopContainer.cpp
         RL/algorithms/QLearning.cpp
         RL/simulators/CrdIslands.cpp
+        RL/Data.cpp
+        RL/helpers/PopulationHelper.cpp
         AbouCRD/CollectiveRiskDilemma.cpp
         AbouCRD/CRDPlayer.cpp
         AbouCRD/CRDSimulator.cpp
-        AbouCRD/DataStruct.cpp RL/Data.cpp)
+        AbouCRD/DataStruct.cpp)
 
 # TODO: Separate libraries into EGT & RL
 set_target_properties(EGTTools PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
