adding PBL simulator

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -37,6 +37,12 @@ set_target_properties(crdP PROPERTIES CMAKE_CXX_FLAGS lboost_program_options)
 set_target_properties(crdP PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
 target_link_libraries(crdP EGTTools)
 
+#add_executable(pbl RL/PBL.cpp)
+#target_link_libraries(pbl ${Boost_LIBRARIES} boost_program_options)
+#set_target_properties(pbl PROPERTIES CMAKE_CXX_FLAGS lboost_program_options)
+#set_target_properties(pbl PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
+#target_link_libraries(pbl EGTTools)
+
 #add_executable(crdC RL/main_conditional.cpp ${CRD_RL_SOURCE})
 #target_link_libraries(crdC ${Boost_LIBRARIES} boost_program_options)
 #set_target_properties(crdC PROPERTIES CMAKE_CXX_FLAGS lboost_program_options)
